# jupyter-ai-copilot

./: LICENSE  README.md  docker-compose.yaml  hello.py  pyproject.toml  tsconfig.json
ai-agent/: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
jupyter-ai-extensions/: .dockerignore  .gitignore  README.md  tsconfig.json
jupyter-ai-extensions/agent_chat/: LICENSE  README.md  package-lock.json  webpack.config.js
jupyter-ai-extensions/agent_chat/.github/workflows/: check-release.yml
jupyter-ai-extensions/agent_chat/src/components/: SidebarWidget.ts
jupyter-ai-extensions/agent_chat/style/: base.css
jupyter-ai-extensions/agent_chat/ui-tests/: package.json
jupyter-ai-extensions/agent_chat/ui-tests/tests/: agent_chat.spec.ts
jupyter-extensions/: Dockerfile  README.md
jupyter-extensions/agent_chat/: .copier-answers.yml  .gitignore  .prettierignore  RELEASE.md  install.json  package.json  pyproject.toml  tsconfig.json
jupyter-extensions/agent_chat/.github/workflows/: build.yml
jupyter-extensions/agent_chat/agent_chat/: __init__.py
jupyter-extensions/agent_chat/src/: index.ts
jupyter-extensions/agent_chat/src/__tests__/: agent_chat.spec.ts
jupyter-extensions/agent_chat/src/components/: IconWidget.ts  InputAreaWidget.ts  MessageContainerWidget.ts  SidebarWidget.ts
jupyter-extensions/agent_chat/style/: index.css
jupyter_ai_agent/: README.md  __init__.py  main.py  requirements.txt
jupyter_ai_agent/agents/: prompt_agent.py
jupyter_ai_agent/routers/: agent.py
jupyter_ai_agent/tests/: __init__.py  test_1.py
jupyter_ai_agent/utils/: tools.py
