[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter-ai-agent"
description = "Jupyter AI Agent Service"
authors = [{ name = "Lalo", email = "biz@appchain.ai" }]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
keywords = ["Jupyter"]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "langchain",
  "langchain-openai",
  "jupyter_kernel_client",
  "jupyter_nbmodel_client==0.4.0",
  "python-dotenv",
  "jupyterlab>=4.3.4",
  "jupyter-collaboration>=3.1.0",
  "ipykernel>=6.29.5",
  "litellm>=1.58.1",
  "docker>=7.1.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pyautogen>=0.4.5",
  "autogen-agentchat>=0.4.5",
  "autogen-ext[openai]>=0.4.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0"
]
example = ["jupyter-server-ydoc"]
test = ["ipykernel", "jupyter_server>=1.6,<3", "pytest>=7.0"]
lint = ["mdformat>0.7", "mdformat-gfm>=0.3.5"]
typing = ["mypy>=0.990"]

[project.scripts]
jaa = "app:main"
jupyter-ai-agent = "app:main"
jupyter-ai-agent-console = "consoleapp:main"

[tool.hatch.version]
path = "__version__.py"

[tool.pytest.ini_options]
filterwarnings = [
  "error",
  "ignore:There is no current event loop:DeprecationWarning",
  "module:make_current is deprecated:DeprecationWarning",
  "module:clear_current is deprecated:DeprecationWarning",
  "module:Jupyter is migrating its paths to use standard platformdirs:DeprecationWarning",
]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
pretty = true
show_error_context = true
show_error_codes = true
strict_equality = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.setuptools]
packages = [""]
